# tiny-mon

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.dev  QuekkaSequence.md  README.md  docker-toolchain.txt  tags
docs/: 00-overview.md  01-api-design.md  02-protocol-serialization.md  03-connection-management.md  04-error-handling.md  05-memory-management.md  06-integration-testing.md  TINYMQ_PROJECT_PLAN.md
include/internal/: comm.h  commManager.h  epoll_handler.h  libsocket.h  tcp_socket.h
include/quekka/: Quekka_config.cpp  Quekka_config.h  Quekka_mdb.hpp  Quekka_producer.cpp  Quekka_producer.h  Quekka_pub.cpp  Quekka_sub.c  Quekka_sub.h  client_manager.h  commManager.h  mdb.hpp  producer.h  quekka.h  socket_server.h
libsrc/: libLogger.c  libLogger.h
libsrc/internal/: client_manager.c  comm.c  commManager.c  epoll_handler.c  libfile.c  libsocket.c  socket_server.c  tcp_socket.c
libsrc/quekka/: Quekka_config.c  Quekka_config.cpp  Quekka_log.c  Quekka_producer.c  Quekka_pub.cpp  Quekka_quecode.c  Quekka_quecode.h
shl/: build.sh  clean.sh
src/: client_manager.c  comm.c  comm.h  commManager.c  epoll_handler.c  epoll_handler.h  example_echo.c  main.cpp  mdb.hpp  socket_server.c  socket_server.h  tcp_socket.c
src/common/: libLogger.c
src/consumer/: consumer.cpp
src/oopc/: quekka.c
src/producer/: producer.c
src/protocol/: command.h
src/server/: client_manager.c  comm.c  commManager.c  epoll_handler.c  example_echo.c  main.cpp  quekka.c  quekka.cpp  socket_server.c  tcp_socket.c
src/storage/: message.h
src/unittest/: CMakeLists.txt  test_Animal.c  test_Epoll.cpp  test_QuekkaConfig.cpp  test_QuekkaMdb.cpp  test_QuekkaProducer.cpp  test_QuekkaPub.cpp  test_QuekkaSub.cpp  test_main.cpp  test_mdb.cpp  test_publisher.c
src/utils/: crc32.c  crc32.h
